# input-remapper-rs

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  compose.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
etc/input-remapper-rs/: config.json  xmodmap.json
scripts/: install.sh  update-repo.sh
src/: main.rs
src/daemon/: manager.rs  service.rs
src/device/: discover.rs  mod.rs  reader.rs  writer.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/mapping/: config.rs  handler.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/screens/: devices.rs  editor.rs  mapping_builder.rs  mod.rs  presets.rs  record.rs  status.rs  symbols.rs
src/tui/widgets/: help_bar.rs  key_matrix.rs  mod.rs  popup.rs
systemd/: input-remapper-rs.service
