[package]
name = "input-remapper-rs"
version = "0.1.0"
edition = "2024"
description = "Remap input device events on kernel level"
license = "GPL-3.0"
authors = ["xi72yow"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
ctrlc = "3.4"
evdev = "0.13.2"
nix = { version = "0.31.2", features = ["ioctl", "poll"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[package.metadata.deb]
maintainer = "xi72yow"
section = "utils"
priority = "optional"
assets = [
    ["target/release/input-remapper-rs", "usr/bin/", "755"],
    ["etc/input-remapper-rs/config.json", "etc/input-remapper-rs/", "644"],
]
systemd-units = { unit-name = "input-remapper-rs", enable = true }
conf-files = ["/etc/input-remapper-rs/config.json"]
